# Taalmodellen

./: .gitignore  Taalmodellen.pro  main.cpp  ngram_requency.cpp
ass1/: CMakeLists.txt  main.cpp
ass2/: CMakeLists.txt  ass2.pro  main.cpp  ngram_requency.cpp  ngram_requency.h  probabilities.cpp  probabilities.h  smoothing.cpp  smoothing.h
ass3/: CMakeLists.txt  ass2.pro  logs.py  main.cpp  ngram_requency.cpp  probabilities.cpp  probabilities.h  smoothing.cpp  smoothing.h  topbigramtrigram.txt
crypto/: CMakeLists.txt  languagemodel.cpp  languagemodel.h  main.cpp  relative_frequencies.cpp  relative_frequencies.h  viterbi.cpp
